# sim_anim

./: .gitignore  .gitmodules  CMakeLists.txt
docs/A1_GameConcept/: magic_eight_concept.tex  references.bib
docs/A1_GameConcept/img/: game_state_gimp.xcf
docs/Alpha/: doc.md
include/: configuration.hpp  enums.hpp
include/GameCore/: GameManager.hpp  PhysicsManager.hpp
include/GameManager/: GameManager.hpp
include/GameObject/: Ball.hpp  GameObject.hpp
include/GameObjects/: Ball.hpp  GameObject.hpp  Hole.hpp  ParticleDynamics.hpp  RigidBody.hpp  SceneHierarchy.hpp
include/Input/: InputManager.hpp
include/InputManager/: InputManager.hpp
include/Physics/: PhysicsManager.hpp
include/Renderer/: Renderer.hpp
include/Rendering/: GUI.hpp  Renderer.hpp  SettingsGui.hpp
include/math/: PathInterpol.hpp  VoronoiFracture.hpp  math.hpp  vector.hpp
include/util/: file.hpp  guard_ptr.hpp  scope_guard.hpp
libs/: CMakeLists.txt
src/: PhysicsManager.cpp  main.cpp
src/GameCore/: GameManager.cpp  PhysicsManager.cpp
src/GameManager/: GameManager.cpp
src/GameObject/: Ball.cpp  GameObject.cpp
src/GameObjects/: Ball.cpp  GameObject.cpp  Hole.cpp  ParticleDynamics.cpp  RigidBody.cpp  SceneHierarchy.cpp
src/Input/: InputManager.cpp
src/InputManager/: InputManager.cpp
src/Renderer/: Renderer.cpp
src/Rendering/: GUI.cpp  Renderer.cpp  SettingsGui.cpp
src/math/: PathInterpol.cpp  VoronoiFracture.cpp  math.cpp  vector.cpp
src/util/: file.cpp
